--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,7 +1,7 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  "description": "",
+  "description": "Electronic e-commerce App Store",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,7 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^14.3.0",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "pg-promise": "^10.11.1",
     "react-scripts": "5.0.0"
   }
